--- a/patient-management/patient-service/src/main/resources/application.properties
+++ b/patient-management/patient-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+
+logging.level=info
