--- a/patient-management/patient-service/src/main/resources/application.properties
+++ b/patient-management/patient-service/src/main/resources/application.properties
@@ -1,11 +1,36 @@
 spring.application.name=patient-service
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:patientdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=password
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:patientdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=admin
+#spring.datasource.password=password
+
+
+#spring.datasource.url=jdbc:postgresql://localhost:5432/patient-db?connectTimeout=30&socketTimeout=30
+#spring.datasource.username=prajwal
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+
+
+#logging.level.org.springframework.jdbc=DEBUG
+#logging.level.org.hibernate.engine.jdbc.env.internal=DEBUG
+
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/patient-db
+#spring.datasource.username=admin
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
