--- a/patient-management/patient-service/pom.xml
+++ b/patient-management/patient-service/pom.xml
@@ -107,6 +107,11 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>4.29.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.2.4</version>
+		</dependency>
     </dependencies>
 
 	<build>
