--- a/patient-management/patient-service/src/main/resources/application.properties
+++ b/patient-management/patient-service/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=patient-service
 
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+
+
 #spring.h2.console.path=/h2-console
 #spring.datasource.url=jdbc:h2:mem:patientdb
 #spring.datasource.driver-class-name=org.h2.Driver
