--- a/patient-management/api-gateway/src/main/resources/application.yaml
+++ b/patient-management/api-gateway/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ spring:
           uri: http://patient-service-patient-service-1-1:8080
           predicates:
             - Path=/api-docs/patients
-          filter:
+          filters:
             - RewritePath=/api-docs/patients,/v3/api-docs
 
 
