--- a/patient-management/auth-service/src/main/resources/application.properties
+++ b/patient-management/auth-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=auth-service
+server.port=8085
 
 #spring.datasource.url=jdbc:mysql://localhost:3308/auth-db
 #spring.datasource.username=admin
