jwt token validation

--- a/patient-management/auth-service/.env
+++ b/patient-management/auth-service/.env
@@ -4,3 +4,4 @@ SPRING_DATASOURCE_URL=jdbc:mysql://auth-mysql-db:3306/auth-db
 SPRING_DATASOURCE_USERNAME=admin
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
 SPRING_SQL_INIT_MODE=always
+JWT_SECRET=wHdu3kUe8z1+aG/ZVY/JhEtfFZ1Zx4mWJysJ3xIepQo=
