--- a/patient-management/auth-service/docker-compose.yaml
+++ b/patient-management/auth-service/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       context: .
       dockerfile: Dockerfile-AuthService
     container_name: auth-service
-    ## As requests are handled via api-gateway
+    ## As requests are handled via api; so not exposing this port outside
 #    ports:
 #      - "8085:8085"
     env_file:
