--- a/patient-management/api-gateway/docker-compose.yaml
+++ b/patient-management/api-gateway/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     container_name: api-gateway
     ports:
       - "8083:8083"
+    env_file:
+      - .env
     networks:
       - internal
 
